更新支付方式

--- a/www/index.html
+++ b/www/index.html
@@ -82,6 +82,7 @@
         <div class="am-u-sm-4 totalItem">总订单：0</div>
         <div class="am-u-sm-6 totalMoney">总金额：0</div>
     </div>
+    <a id="aa" href="templates/information.html"></a>
 </div>
 <span id="test"></span>
 <!--日期选择插件-->
